test/good/83.zls
(* Emission with function call on a transition *)

let rf x = (x, x)

let hybrid f z = x where
  rec der x = 1.0 init -1.0
  and automaton
      | S0 ->
          do
          until z then do emit xr = (x, x) in S0
      end

